<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Diaspora Webclient</string>

    <string name="menu_home">Stream</string>
    <string name="menu_share">Share</string>
    <string name="menu_findtag">Find tag</string>
    <string name="menu_podsettings">PodSettings</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_donation">Donation</string>
    <string name="menu_translate">Translate</string> 
    <string name="menu_contacts">Contacts</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_profile">Profile</string>
   
    <string name="menu_aspects">Aspects</string>
    
    <string name="menu_invite">Invite</string>
    <string name="menu_exit">Exit</string>
    
    <string name="podsettings_h1">Settings.</string>
    <string name="podsettings_text_currentpod">Find your pod.</string>
    <string name="podsettings_currentpod"></string>
    
    <string name="podsettings_dialog_title">PodSettings</string>
  	<string name="podsettings_dialog_text">You have to choose a pod before you can logon Diaspora.\nWith this client you wil only be enable to logon pods there uses https.\nAll pods showing in the list is from podupti.me and uses https.</string>
        
    <string name="widget_button_share">Share on diaspora</string>   
     
     <string name="podsettings_button_save">Use this pod</string>
     
     <string name="setupinternet_h1">Setup internet</string>
     <string name="setupinternet_text">This app require a internet connection!</string>
     <string name="setupinternet_button_wirelesssettings">Wireless settings</string>
     <string name="setupinternet_button">Close</string>
     <string name="findtag_h1">Findtag</string>
     <string name="findtag_p">Type a word and see what the stream contains</string>
     <string name="findtag_button">See it´s stream</string>
     <string name="findtag_alert_title">Search by #tag</string>
     <string name="findtag_alert_validate_needsomedata">Try to add a tag like: #newhere or #art</string>
     <string name="findtag" >findtag</string>
     
         
     <string name="podsettings_button_close">Ok</string>
     
     <string name="translate_chooselanguage_h1">Translate post to this language.</string>
     <string name="translate_googlekey_h1">Add your translate api-key here.</string>
     <string name="translate_button_text">Use this key</string>
     <string name="translate_button_linkto_googleapiconsole">Google api console</string>
     <string name="translate_howto_text">You can use Microsoft-translator for free, just type microsoft-translator as your api-key. You can use Google Translate API v2, this is based on usage(payment). Translation usage is calculated in millions of characters (M), where 1 M = 10^6 characters. Important: Google Translate API v2 requires billing information for all accounts before you can start using the service. To sign up for billing, sign in to the Google APIs console and click the Billing tab. 1 M characters of text = $20.</string>
     <string name="translate_button_howto_obtain_googletranslatekey">See how you obtain the Google Translate Key</string>
</resources>