<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   	<item android:id="@+id/mainmenu_share" android:icon="@drawable/ic_menu_share" android:title="@string/menu_share" />
   	<item android:id="@+id/mainmenu_translate" android:icon="@drawable/ic_menu_translate" android:title="@string/menu_translate" />
   	<item android:id="@+id/mainmenu_podsettings" android:icon="@drawable/ic_menu_podsettings" android:title="@string/menu_podsettings" />
    <item android:id="@+id/mainmenu_tips" android:icon="@drawable/ic_menu_tips" android:title="@string/menu_tips" />
    <item android:id="@+id/mainmenu_donation" android:icon="@drawable/ic_menu_donation" android:title="@string/menu_donation" />
    <item android:id="@+id/mainmenu_exit" android:icon="@drawable/ic_menu_exit" android:title="@string/menu_exit" />
</menu>