<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/topmenu_repeat" >
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/topmenu" />
	</LinearLayout>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/podsettings_text_currentpod"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_currentpod"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/podsettings_currentpod">
    </EditText>
    <Button
        android:id="@+id/settings_button_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="Onclick_SaveSettings"
        android:text="@string/podsettings_button_save" />

    <ListView
        android:id="@+id/listView_poduptime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>