<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/topmenu_repeat" >
		    <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/topmenu" />
	</LinearLayout>

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/translate_h1"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/editText_translate"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <requestFocus />
	</EditText>
	<Button
	    android:id="@+id/translate_button_save"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/translate_button_text"
	    android:onClick="onlick_save_key" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/translate_howto_text"
	    android:textAppearance="?android:attr/textAppearanceSmall" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/translate_button_linkto_googleapiconsole"
	    android:onClick="onlick_goto_googleapiconsole" />

</LinearLayout>